reorganize codebase, use mpg4 encoder, added lots of logging

--- a/fish_control/config.json
+++ b/fish_control/config.json
@@ -1,3 +1,4 @@
 {
-    "data_directory": "/home/jmdelahanty/ahrens_data/lgfl/rawdata"
+    "raw_data_directory": "D:/lgfl",
+    "remote_data_directory": "Z:/lgfl"
 }
